Add TomEE Maven Plugin to the hello-servlet application, and include the setting to keep the default Tomcat/TomEE webapps.