@@ -17,5 +17,18 @@
   </dependencies>
   <build> 
     <finalName>hello-servlet</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.tomee.maven</groupId>
+        <artifactId>tomee-maven-plugin</artifactId>
+        <version>8.0.1-SNAPSHOT</version>
+        <configuration>
+          <tomeeClassifier>plume</tomeeClassifier>
+          <args>-Xmx512m -XX:PermSize=256m</args>
+          <removeDefaultWebapps>false</removeDefaultWebapps>
+        </configuration>
+      </plugin>
+  </plugins>
   </build>
+  
 </project>
